test/should_not_compile/record4.sml
val _ = { a = "A", x = #"x" } : { a : string, b : int };
